--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,3 +1,23 @@
 %body
 
 =render 'shared/header'
+
+
+.main
+  .main-top
+    .main-top__content
+      .main-top__content__box
+        %h2
+          スマホでかんたん
+          %br
+          フリマアプリ
+        %p.top-text
+          メルカリはスマホカメラからすぐに出品できる
+          %br
+          購入時も安心な独自システムのアプリです
+        .main-top__store
+          %a.left-link{href: ""}
+            %img{src: "//www-mercari-jp.akamaized.net/assets/img/common/common/app-store.svg?2777205881"}
+          %a.right-link{href: ""}
+            %img{src: "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?2777205881"}
+        %img.main-top__image{src: "//www-mercari-jp.akamaized.net/assets/img/common/jp/top/main_content_pc.png?2777205881"}
