--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,8 @@
+/*
+ *= require font-awesome
+ */
 @import "./reset";
 @import "./variable";
 @import "./header";
 @import "./main-top";
+@import "./footer";
