--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -21,3 +21,6 @@
           %a.right-link{href: ""}
             %img{src: "//www-mercari-jp.akamaized.net/assets/img/common/common/google-play.svg?2777205881"}
         %img.main-top__image{src: "//www-mercari-jp.akamaized.net/assets/img/common/jp/top/main_content_pc.png?2777205881"}
+  .main-content
+
+  =render 'shared/footer'
