add_search-icon

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -7,7 +7,7 @@
       %input.search-form{type: "search", name: "keyword", placeholder: "キーワードから探す"}
       / = form_for [] do |f|
       /   = f.text_field :product, class: "search-form", placeholder: "何をお探しですか?"
-      %i.icon-search
+      %i.fa.fa-search
     .main-header__nav-box
       %nav.left-box
         %ul.login-nav
