Add_background-color
ヘッダー、フッターに背景色を仮指定

--- a/app/assets/stylesheets/_main-top.scss
+++ b/app/assets/stylesheets/_main-top.scss
@@ -2,7 +2,8 @@
   height: 390px;
   position: relative;
   bottom: 48px;
-  background-image: url("/jp/assets/img/common/jp/top/main_bg_pc.jpg");
+  margin-bottom: -48px;
+  background-color: #F3FFD8;
 
   &__content {
     height: 100%;
@@ -43,4 +44,5 @@
 
 .main-content {
   height: 800px;
+  background-color: #f5f5f5;
 }
