--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -2,6 +2,7 @@
   height: 260px;
   width: 100%;
   position: relative;
+  background-color: #A0522D;
   .banner__box {
     margin: 0 auto;
     height: 260px;
