--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -14,9 +14,73 @@
           %li
             %a.category{href: ""}
               カテゴリから探す
+              %ul.category
+                %li
+                  %a{href: ""}
+                    レディース
+                %li
+                  %a{href: ""}
+                    メンズ
+                %li
+                  %a{href: ""}
+                    ベビー・キッズ
+                %li
+                  %a{href: ""}
+                    インテリア・住まい・小物
+                %li
+                  %a{href: ""}
+                    本・音楽・ゲーム
+                %li
+                  %a{href: ""}
+                    おもちゃ・ホビー・グッズ
+                %li
+                  %a{href: ""}
+                    コスメ・香水・美容
+                %li
+                  %a{href: ""}
+                    家電・スマホ・カメラ
+                %li
+                  %a{href: ""}
+                    スポーツ・レジャー
+                %li
+                  %a{href: ""}
+                    ハンドメイド
+                %li
+                  %a{href: ""}
+                    チケット
+                %li
+                  %a{href: ""}
+                    自転車・オートバイ
+                %li
+                  %a{href: ""}
+                    その他
+                %li
+                  %a{href: ""}
+                    カテゴリー一覧
+
           %li
             %a.brand{href: ""}
               ブランドから探す
+              %ul.brand
+                %li
+                  %a{href: ""}
+                    シャネル
+                %li
+                  %a{href: ""}
+                    ナイキ
+                %li
+                  %a{href: ""}
+                    ルイヴィトン
+                %li
+                  %a{href: ""}
+                    シュプリーム
+                %li
+                  %a{href: ""}
+                    アディダス
+                %li
+                  %a{href: ""}
+                    ブランド一覧
+
       %nav.right-box
         %ul.header-nav
           %li
