--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -3,7 +3,7 @@
   width: 100%;
   position: relative;
   background-color: #A0522D;
-  .banner__box {
+  &__box {
     margin: 0 auto;
     height: 260px;
     width: 750px;
