edit_application.scss
@import "./fontawesome”;を追加で記述

--- a/app/assets/stylesheets/_fontawesome.scss
+++ b/app/assets/stylesheets/_fontawesome.scss
@@ -6,6 +6,8 @@ i.fa.fa-search {
 }
 
 i.fa.fa-camera {
+  font-weight: 400;
   font-size: 54px;
   margin: 8px 0 0;
+  font-family: 'Fontawesome';
 }
