--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,6 @@
 @import "./header";
 @import "./main-top";
 @import "./footer";
+@import "./font-awesome";
 @import "./fontawesome";
 @import "./show-products";
