--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,5 @@
 @import "./main-top";
 @import "./footer";
 @import "./font-awesome";
-@import "./fontawesome";
+@import "./icon";
 @import "./show-products";
