edit_application.scss
@import "./font-awesome”;
→@import "font-awesome”;

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,6 @@
 @import "./header";
 @import "./main-top";
 @import "./footer";
-@import "./font-awesome";
+@import "font-awesome";
 @import "./icon";
 @import "./show-products";
