--- a/app/views/logo/_header.html.haml
+++ b/app/views/logo/_header.html.haml
@@ -1,4 +1,4 @@
 %header.header
   %h1
     %a{href: "#"}
-      = image_tag 'mercalli_logo.svg',alt: :logo
+      %image{src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?3708647559"}
