Modify application.scss for resolving conflict

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,10 @@
 @import "./reset";
 @import "./variable";
-@import "./product_purchase_confirmation";
+@import "./header";
+@import "./main-top";
+@import "./footer";
 @import "font-awesome";
-
+@import "./icon";
+@import "./show-products";
+@import "./exhibit";
+@import "./product_purchase_confirmation";
