--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,7 @@
 @import "./icon";
 @import "./show-products";
 @import "./login";
+@import "./exhibit";
+@import "./users";
+@import "./userInfo";
+@import "./product_purchase_confirmation";
