新規登録画面のマークアップ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,8 @@
 @import "./users";
 @import "./userInfo";
 @import "./product_purchase_confirmation";
+@import "./signup";
+@import "./signup-phone";
+@import "./signup-address";
+@import "./signup-card";
+@import "./signup-complete";
