--- a/app/views/devise/registrations/_signup-address.html.erb
+++ b/app/views/devise/registrations/_signup-address.html.erb
@@ -9,7 +9,7 @@
       <ol>
         <li>
           会員情報
-          <div class="header-progress-bar-top"></div>
+          <div class="header-progress-bar-top completed"></div>
         </li>
         <li>
           電話番号認証
@@ -34,7 +34,7 @@
     <section class="main-section">
       <h2>住所入力</h2>
       <form class="main-section__form" action="" method="" accept-charset="utf-8">
-        <div class="main-section__form-content">
+        <div class="main-section__form-content-address">
           <div class="main-section__form-content-group">
             <label for="family_name_kanji">お名前</label>
             <span>必須</span>
