--- a/app/views/devise/registrations/_signup-card.html.erb
+++ b/app/views/devise/registrations/_signup-card.html.erb
@@ -9,7 +9,7 @@
       <ol>
         <li>
           会員情報
-          <div class="header-progress-bar-top"></div>
+          <div class="header-progress-bar-top completed"></div>
         </li>
         <li>
           電話番号認証
@@ -82,7 +82,7 @@
               <option value="11">11</option>
               <option value="12">12</option>
             </select>
-            <i></i><!-- アイコンを追加すること -->
+            <i></i>
             <select class="month-year" name="">
               <option value="19">19</option>
               <option value="20">20</option>
