--- a/app/views/devise/registrations/_signup-complete.html.erb
+++ b/app/views/devise/registrations/_signup-complete.html.erb
@@ -9,7 +9,7 @@
       <ol>
         <li>
           会員情報
-          <div class="header-progress-bar-top"></div>
+          <div class="header-progress-bar-top completed"></div>
         </li>
         <li>
           電話番号認証
