Add link of products#show

--- a/app/views/products/_product.html.haml
+++ b/app/views/products/_product.html.haml
@@ -1,5 +1,5 @@
 %section.item-exhibitor__item-box-content--box
-  %a{:href => "#"}
+  = link_to product_path(product) do
     %img{:alt => "", :src => "https://mcdn.mercariapp.com/thumb/photos/m68337163107_1.jpg?1545590936"}/
     .item-exhibitor__item-box-content--box-body
       %h3
