--- a/app/views/products/_product.html.haml
+++ b/app/views/products/_product.html.haml
@@ -6,7 +6,7 @@
         = product.name
       .item-exhibitor__item-box-content--box-body-bottom.clearfix
         .item-exhibitor__item-box-content--box-body-bottom-price
-          = product.price.to_s(:currency, precision: 0, unit: "¥ ")
+          = price_format(product.price)
         .item-exhibitor__item-box-content--box-body-bottom-like
           %i
           / アイコンを追加すること
