--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -28,7 +28,7 @@
               %h3.main__section__inner__form__group__subCategory
                 カテゴリー
                 %span.main__section__inner__form__group__subCategory__attention 必須
-              = f.select :status, [["レディース", "レディース"], ["メンズ", "メンズ"], ["ベビー・キッズ", "ベビー・キッズ"], ["インテリア・住まい・小物", "インテリア・住まい・小物"], ["本・音楽・ゲーム", "本・音楽・ゲーム"], ["おもちゃ・ホビー・グッズ", "おもちゃ・ホビー・グッズ"], ["コスメ・香水・美容", "コスメ・香水・美容"], ["家電・スマホ・カメラ", "家電・スマホ・カメラ"], ["スポーツ・レジャー", "スポーツ・レジャー"], ["ハンドメイド", "ハンドメイド"], ["チケット", "チケット"], ["自動車・オートバイ", "自動車・オートバイ"], ["その他", "その他"]], {include_blank: "---"}
+              / = f.select :category, [["レディース", "レディース"], ["メンズ", "メンズ"], ["ベビー・キッズ", "ベビー・キッズ"], ["インテリア・住まい・小物", "インテリア・住まい・小物"], ["本・音楽・ゲーム", "本・音楽・ゲーム"], ["おもちゃ・ホビー・グッズ", "おもちゃ・ホビー・グッズ"], ["コスメ・香水・美容", "コスメ・香水・美容"], ["家電・スマホ・カメラ", "家電・スマホ・カメラ"], ["スポーツ・レジャー", "スポーツ・レジャー"], ["ハンドメイド", "ハンドメイド"], ["チケット", "チケット"], ["自動車・オートバイ", "自動車・オートバイ"], ["その他", "その他"]], {include_blank: "---"}
             .main__section__inner__form__group
               %h3.main__section__inner__form__group__subCategory
                 商品の状態
@@ -47,104 +47,7 @@
               %h3.main__section__inner__form__group__subCategory
                 発送元の地域
                 %span.main__section__inner__form__group__subCategory__attention 必須
-              %select.main__section__inner__form__group__select
-                %option{value: ""} ---
-                %option{value: "1"}
-                  北海道
-                %option{value: "2"}
-                  青森県
-                %option{value: "3"}
-                  岩手県
-                %option{value: "4"}
-                  宮城県
-                %option{value: "5"}
-                  秋田県
-                %option{value: "6"}
-                  山形県
-                %option{value: "7"}
-                  福島県
-                %option{value: "8"}
-                  茨城県
-                %option{value: "9"}
-                  栃木県
-                %option{value: "10"}
-                  群馬県
-                %option{value: "11"}
-                  埼玉県
-                %option{value: "12"}
-                  千葉県
-                %option{value: "13"}
-                  東京都
-                %option{value: "14"}
-                  神奈川県
-                %option{value: "15"}
-                  新潟県
-                %option{value: "16"}
-                  富山県
-                %option{value: "17"}
-                  石川県
-                %option{value: "18"}
-                  福井県
-                %option{value: "19"}
-                  山梨県
-                %option{value: "20"}
-                  長野県
-                %option{value: "21"}
-                  岐阜県
-                %option{value: "22"}
-                  静岡県
-                %option{value: "23"}
-                  愛知県
-                %option{value: "24"}
-                  三重県
-                %option{value: "25"}
-                  滋賀県
-                %option{value: "26"}
-                  京都府
-                %option{value: "27"}
-                  大阪府
-                %option{value: "28"}
-                  兵庫県
-                %option{value: "29"}
-                  奈良県
-                %option{value: "30"}
-                  和歌山県
-                %option{value: "31"}
-                  鳥取県
-                %option{value: "32"}
-                  島根県
-                %option{value: "33"}
-                  岡山県
-                %option{value: "34"}
-                  広島県
-                %option{value: "35"}
-                  山口県
-                %option{value: "36"}
-                  徳島県
-                %option{value: "37"}
-                  愛媛県
-                %option{value: "38"}
-                  香川県
-                %option{value: "39"}
-                  高知県
-                %option{value: "40"}
-                  福岡県
-                %option{value: "41"}
-                  佐賀県
-                %option{value: "42"}
-                  長崎県
-                %option{value: "43"}
-                  熊本県
-                %option{value: "44"}
-                  大分県
-                %option{value: "45"}
-                  宮崎県
-                %option{value: "46"}
-                  鹿児島県
-                %option{value: "47"}
-                  沖縄県
-                %option{value: "48"}
-                  未定
+              = f.select :region, [["北海道", "北海道"], ["青森県", "青森県"], ["岩手県", "岩手県"], ["宮城県", "宮城県"], ["秋田県", "秋田県"], ["山形県", "山形県"], ["福島県", "福島県"], ["茨城県", "茨城県"], ["栃木県", "栃木県"], ["群馬県", "群馬県"], ["埼玉県", "埼玉県"], ["千葉県", "千葉県"], ["東京都", "東京都"], ["神奈川県", "神奈川県"], ["新潟県", "新潟県"], ["富山県", "富山県"], ["石川県", "石川県"], ["福井県", "福井県"], ["山梨県", "山梨県"], ["長野県", "長野県"], ["岐阜県", "岐阜県"], ["静岡県", "静岡県"], ["愛知県", "愛知県"], ["三重県", "三重県"], ["滋賀県", "滋賀県"], ["京都府", "京都府"], ["大阪府", "大阪府"], ["兵庫県", "兵庫県"], ["奈良県", "奈良県"], ["和歌山県", "和歌山県"], ["鳥取県", "鳥取県"], ["島根県", "島根県"], ["岡山県", "岡山県"], ["広島県", "広島県"], ["山口県", "山口県"], ["徳島県", "徳島県"], ["愛媛県", "愛媛県"], ["香川県", "香川県"], ["高知県", "高知県"], ["福岡県", "福岡県"], ["佐賀県", "佐賀県"], ["長崎県", "長崎県"], ["熊本県", "熊本県"], ["大分県", "大分県"], ["宮崎県", "宮崎県"], ["鹿児島県", "鹿児島県"], ["沖縄県", "沖縄県"], ["未定", "未定"]], {include_blank: "---"}
 
             .main__section__inner__form__group
               %h3.main__section__inner__form__group__subCategory
@@ -162,7 +65,7 @@
                   %span.main__section__inner__form__group__left__subCategory__attention 必須
               .main__section__inner__form__group__right
                 ¥
-                %input.main__section__inner__form__group__right__price{placeholder: "例）300"}
+                = f.text_field :price, placeholder: "例) 300", class: "main__section__inner__form__group__right__price"
           .main__section__inner__form
             .main__section__inner__form__commission
               .main__section__inner__form__commission__label
@@ -179,7 +82,7 @@
           またブランド品でシリアルナンバー等がある場合はご記載ください。偽ブランドの販売は犯罪であり処罰される可能性があります。
           %br/
           また、出品をもちまして加盟店規約に同意したことになります。
-          %button.button 出品する
+          = f.submit "出品する", class: "button"
           = link_to "戻る", :back, {class: "back"}
 
   = render "logo/footer"
