--- a/app/assets/stylesheets/_list.scss
+++ b/app/assets/stylesheets/_list.scss
@@ -15,6 +15,9 @@
     border: 1px solid #ccc;
     font-size: 14px;
     line-height: 42px;
+    a {
+      color: #333;
+    }
     a:visited {
       color: #333;
     }
