--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -86,7 +86,7 @@
         </tr>
         <tr>
           <th>発送料の負担</th>
-          <td></td>
+          <td><%= @product.shipping_burden %></td>
         </tr>
         <tr>
           <th>配送の方法</th>
@@ -109,7 +109,7 @@
     <span class="item-container__price-price"><%= price_format(@product.price) %></span>
     <span class="item-container__price-tax">(税込)</span>
     <span class="item-container__price-fee">
-      送料込み
+      <%= @product.shipping_burden == 0 ? "送料込み" : "着払い" %>
     </span>
   </div>
   <%= link_to "購入画面に進む", "", { class: "item-container__buy" } %>
