--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -75,7 +75,7 @@
             .main__section__inner__form__profits
               .main__section__inner__form__profits__label
                 販売利益
-              .main__section__inner__form__profits__number -
+              #profits.main__section__inner__form__profits__number -
         .main__section__inner.clearfix
           %p
           禁止されている出品、行為を必ずご確認ください。
